[project]
name = "detoxify"
version = "0.5.2"
description = "A python library for detecting toxic comments"
readme = "README.md"
authors = [
    {name = "Unitary", email = "laura@unitary.ai"},
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "sentencepiece >= 0.1.94",
    "torch >=2",
    "transformers >= 3",
]

[tool.setuptools]
packages = ["detoxify"]

[project.urls]
Homepage = "https://github.com/unitaryai/detoxify"

[project.optional-dependencies]
dev = [
    "datasets >= 1.0.2",
    "pandas >= 1.1.2",
    "pytest",
    "pytorch-lightning>2",
    "scikit-learn >= 0.23.2",
    "tqdm",
    "pre-commit",
    "numpy>=2",
    "pyright"
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E731",    # Do not assign a lambda expression, use a def
    "E402",    # Module level import not at top of file
    "F401",    # Module imported but unused
    "F841",    # Local variable name is assigned to but never used
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    "dist",
    "build",
]
addopts = [
    "--strict-markers",
    "--doctest-modules",
    "--durations=0",
    "--color=yes",
]
filterwarnings = [
    "ignore:.*deprecated alias.*:DeprecationWarning:tensorboard.*tensorflow_stub*:",
    "ignore:.*deprecated alias.*:DeprecationWarning:tensorboard.*tensor_util*:",
    "ignore:.*deprecated alias.*:DeprecationWarning:pyarrow.*pandas_compat*:",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
