[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --strict-markers
    --doctest-modules
    --durations=0
    --color=yes
# Silence numpy builtin type alias warnigns in third party libs
# https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations
filterwarnings = ignore:.*deprecated alias.*:DeprecationWarning:tensorboard.*tensorflow_stub*:
                 ignore:.*deprecated alias.*:DeprecationWarning:tensorboard.*tensor_util*:
                 ignore:.*deprecated alias.*:DeprecationWarning:pyarrow.*pandas_compat*:

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass

[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    # Do not assign a lambda expression, use a def
    E731,
    # Line break occurred after a binary operator
    W504,
    # Line break occurred after a binary operator
    W503,
    # Module imported but unused
    F401,
    # Local variable name is assigned to but never used
    F841,
    # Invalid escape sequence 'x'
    W605

# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*

[metadata]
license_file = LICENSE
description-file = README.md
# long_description = file:README.md
# long_description_content_type = text/markdown
